<resources>
    <string name="app_name">NOVA</string>

    <string name="settings">Options</string>
    <string name="leaderboard">Scores</string>
    <string name="new_game">New Game</string>
    <string name="difficulty">Difficulty: </string>
    <string name="timer">Timer : </string>
    <string name="resources">Resources :</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="connection">Connection</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Sign up</string>
    <plurals name="turn_recap">
        <item quantity="one">You survived %d turn.</item>
        <item quantity="other">You survived %d turns.</item>
    </plurals>
    <string name="resourceLoadingPrompt">"Loading resources"</string>
    <string name="invalid_username_msg">Username length should be between 6 and 20 characters</string>
    <string name="invalid_password_msg">Password length should be greater than 8 characters</string>
    <string name="connection_err_msg">An error appear during connection</string>
    <string name="user_not_exist_msg">Username or password does not exist</string>
    <string name="network_not_available_msg">Network not available</string>
    <string name="user_have_to_re_auth_msg">You must re-auth to the game</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="resume_game">Resume game</string>
    <string name="event_background">Event background</string>
    <string name="resource_icon">Resource icon</string>
    <string name="end_game_title">You lost</string>
    <string name="end_game_message">Drifting in space forever</string>
    <string name="end_game_resources_recap">Your were out of %1$s</string>
    <string name="open_settings">Open settings</string>
    <string name="open_leaderboard">Open leader board</string>
    <string name="dark_mode">Dark mode</string>
    <string name="language">Language</string>
    <string name="music">Music</string>
    <string name="notifications">Notifications</string>
    <string name="daily_event">Activate daily events</string>
    <string name="log_out">Logout</string>
    <string name="save">Save</string>
    <string name="crew_message">Crew message…</string>
    <string name="loading">Loading</string>
    <string name="loading_step_1">Initial checking…</string>
    <string name="loading_step_2">Ammo stock is ok…</string>
    <string name="loading_step_3">Thrusters preheating…</string>
    <string name="loading_step_4">Storing beer in space fridge…</string>
    <string name="loading_step_5">Hyper space ignition</string>
    <string name="loading_step_6">Blaster cleaning…</string>
    <string name="loading_step_7">Let\'s go!!</string>
    <string name="title">Title</string>
    <string name="rounds">Rounds :</string>
    <string name="duration">Duration :</string>
    <string name="score_fetch_error_msg">An error occurred during score fetching</string>
    <string name="menu">Menu</string>
    <string name="no_more_game_to_load">No more games are available</string>
    <string name="no_games_available">No games are available for this difficulty</string>
    <string name="increase">Increase</string>
    <string name="resource_fetching_msg">Nova resources fetching could impact your network consumption, continue ?</string>
    <string name="launch_update">Launch update</string>
    <string name="network_warning">Network warning !</string>
    <string name="unexpected_error_msg">Unexpected error !</string>
    <string name="settings_saved">Settings saved</string>
    <string name="trophy">Trophy</string>
    <string name="icon">Icon</string>
    <string name="channel_name" translatable="false">Push notification channel</string>
    <string name="channel_description" translatable="false">Notification channel for push notifications.</string>
</resources>