<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/simple_bg"
    tools:context=".parameters.ui.ParametersActivity">

    <TextView
        android:id="@+id/tv_option_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/til_language_option"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/settings"
        android:textAlignment="center"
        android:fontFamily="@font/stracruiser_italic"
        android:textColor="@color/secondaryColor"
        android:textSize="@dimen/title_size" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_left_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_right_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_language_option"
        app:layout_constraintTop_toBottomOf="@id/tv_option_title"
        app:layout_constraintBottom_toTopOf="@id/s_download_option"
        app:layout_constraintStart_toEndOf="@id/gl_left_option"
        app:layout_constraintEnd_toStartOf="@id/gl_right_option"
        app:endIconTint="@color/primaryColor"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:textColorHint="@color/primaryColor"
        app:boxStrokeColor="@color/primaryColor"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:hint="@string/language">

        <com.esgi.nova.ui.TextInputDropdownMenu
            android:id="@+id/tv_language_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textColor="@color/secondaryColor"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/s_download_option"

        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@id/til_language_option"
        app:layout_constraintBottom_toTopOf="@id/s_dark_mode_option"
        app:layout_constraintStart_toStartOf="@id/gl_left_option"
        app:layout_constraintEnd_toEndOf="@id/gl_right_option"

        app:useMaterialThemeColors="false"
        android:padding="15dp"
        android:textColor="@color/primaryColor"

        android:checked="true"
        android:text="@string/daily_event" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/s_dark_mode_option"

        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@id/s_download_option"
        app:layout_constraintBottom_toTopOf="@id/s_notification_option"
        app:layout_constraintStart_toStartOf="@id/gl_left_option"
        app:layout_constraintEnd_toEndOf="@id/gl_right_option"

        app:useMaterialThemeColors="false"
        android:padding="15dp"
        android:textColor="@color/primaryColor"
        android:checked="true"
        android:text="@string/dark_mode"
         />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/s_notification_option"

        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@id/s_dark_mode_option"
        app:layout_constraintBottom_toTopOf="@id/s_music_option"
        app:layout_constraintStart_toStartOf="@id/gl_left_option"
        app:layout_constraintEnd_toEndOf="@id/gl_right_option"
        app:useMaterialThemeColors="false"

        android:padding="15dp"
        android:textColor="@color/primaryColor"
        android:checked="true"
        android:text="@string/notifications"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/s_music_option"

        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@id/s_notification_option"
        app:layout_constraintBottom_toTopOf="@id/ll_buttons_option"
        app:layout_constraintStart_toStartOf="@id/gl_left_option"
        app:layout_constraintEnd_toEndOf="@id/gl_right_option"
        app:useMaterialThemeColors="false"

        android:padding="15dp"
        android:textColor="@color/primaryColor"
        android:checked="true"
        android:text="@string/music"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_buttons_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/s_music_option"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        >
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_disconnect_option"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_save_option"
            app:icon="@drawable/baseline_close_white_24"
            android:backgroundTint="@color/secondaryColor"
            android:text="@string/log_out"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_save_option"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_disconnect_option"
            app:layout_constraintEnd_toEndOf="parent"
            app:icon="@drawable/baseline_save_white_24"
            android:backgroundTint="@color/primaryColor"
            android:text="@string/save"/>



    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>