<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_marge_gl"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_marge_gl"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".12" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/music_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music"
        app:layout_constraintBottom_toTopOf="@id/dark_mode_btn"
        app:layout_constraintStart_toStartOf="@id/left_marge_gl"
        app:layout_constraintTop_toBottomOf="@id/top_marge_gl">

    </com.google.android.material.switchmaterial.SwitchMaterial>


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/dark_mode_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode"
        app:layout_constraintBottom_toTopOf="@id/notification_btn"
        app:layout_constraintStart_toStartOf="@id/left_marge_gl"
        app:layout_constraintTop_toBottomOf="@id/music_btn">

    </com.google.android.material.switchmaterial.SwitchMaterial>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/notification_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        app:layout_constraintBottom_toTopOf="@id/language_ln"
        app:layout_constraintStart_toStartOf="@id/left_marge_gl"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.switchmaterial.SwitchMaterial>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/language_ln"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/primaryColor"
        android:backgroundTint="@color/primaryColor"
        android:hint="@string/language"
        app:layout_constraintStart_toStartOf="@id/left_marge_gl"
        app:layout_constraintTop_toBottomOf="@id/notification_btn">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/language_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryColor"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>