<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard">

    <Button
        android:id="@+id/btn_to_leaderboard"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/scores_icons_48"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button

        android:id="@+id/btn_to_parameters"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/settings_icons_48"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ln_difficulty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:text="@string/app_name"
        android:textSize="@android:dimen/app_icon_size"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start_params"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ln_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintBottom_toTopOf="@+id/ln_timer"
        app:layout_constraintStart_toStartOf="@id/gl_start_params"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/difficulty"
            />
        <Spinner
            android:id="@+id/spn_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ln_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ln_difficulty"
        app:layout_constraintBottom_toTopOf="@id/ln_resources"
        app:layout_constraintStart_toStartOf="@id/gl_start_params"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/timer"
            />
        <ToggleButton
            android:id="@+id/tgl_btn_timer"
            android:textOn="@string/tgl_btn_on"
            android:textOff="@string/tgl_btn_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ln_resources"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ln_timer"
        app:layout_constraintBottom_toTopOf="@id/btn_new_game"
        app:layout_constraintStart_toStartOf="@id/gl_start_params"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/resources"
            />
        <Spinner
            android:id="@+id/spn_resources"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ln_resources"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/buttonColor"
        android:id="@+id/btn_new_game"
        android:text="@string/new_game" />



</androidx.constraintlayout.widget.ConstraintLayout>